--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -6,6 +6,104 @@
   "configurations": [
     {
       "type": "java",
+      "name": "lc1052",
+      "request": "launch",
+      "mainClass": "lc1052",
+      "projectName": "Java_f21d0313"
+    },
+    {
+      "type": "java",
+      "name": "lc826",
+      "request": "launch",
+      "mainClass": "lc826",
+      "projectName": "Java_f21d0313"
+    },
+    {
+      "type": "java",
+      "name": "lc633",
+      "request": "launch",
+      "mainClass": "lc633",
+      "projectName": "Java_f21d0313"
+    },
+    {
+      "type": "java",
+      "name": "lc1122",
+      "request": "launch",
+      "mainClass": "lc1122",
+      "projectName": "Java_f21d0313"
+    },
+    {
+      "type": "java",
+      "name": "lc974",
+      "request": "launch",
+      "mainClass": "lc974",
+      "projectName": "Java_f21d0313"
+    },
+    {
+      "type": "java",
+      "name": "lc648",
+      "request": "launch",
+      "mainClass": "lc648",
+      "projectName": "Java_f21d0313"
+    },
+    {
+      "type": "java",
+      "name": "lc846",
+      "request": "launch",
+      "mainClass": "lc846",
+      "projectName": "Java_f21d0313"
+    },
+    {
+      "type": "java",
+      "name": "lc2486",
+      "request": "launch",
+      "mainClass": "lc2486",
+      "projectName": "Java_f21d0313"
+    },
+    {
+      "type": "java",
+      "name": "lc344",
+      "request": "launch",
+      "mainClass": "lc344",
+      "projectName": "Java_f21d0313"
+    },
+    {
+      "type": "java",
+      "name": "lc3110",
+      "request": "launch",
+      "mainClass": "lc3110",
+      "projectName": "Java_f21d0313"
+    },
+    {
+      "type": "java",
+      "name": "lc131",
+      "request": "launch",
+      "mainClass": "lc131",
+      "projectName": "Java_f21d0313"
+    },
+    {
+      "type": "java",
+      "name": "lc1404",
+      "request": "launch",
+      "mainClass": "lc1404",
+      "projectName": "Java_f21d0313"
+    },
+    {
+      "type": "java",
+      "name": "lc1608",
+      "request": "launch",
+      "mainClass": "lc1608",
+      "projectName": "Java_f21d0313"
+    },
+    {
+      "type": "java",
+      "name": "lc2597",
+      "request": "launch",
+      "mainClass": "lc2597",
+      "projectName": "Java_f21d0313"
+    },
+    {
+      "type": "java",
       "name": "lc1863",
       "request": "launch",
       "mainClass": "lc1863",
